--- a/style.css
+++ b/style.css
@@ -1,13 +1,36 @@
-.track {
-         height: 100px;
-         border: 1px solid #ccc;
+.track
+{
+  border: 1px solid #ccc;
+  position: relative;
+  height: 100px;
+  }
+
+.clip
+{
+  border: 1px solid #eee;
+  position: absolute;
+  }
+
+
+.clip .canvas-clip
+{
+  height: 100px;
+  float: left;
+  overflow: hidden;
 }
 
-.clip {
-        height: 100px;
-        border: 1px solid #eee;
-        }
+.clip .left-handle
+{
+  float: left;
+  width: 20px;
+  height: 100px;
+  background: #ccc;
+  }
 
-.clip canvas {
-       height: 100px;
-}
+.clip .right-handle
+{
+  float: right;
+  width: 20px;
+  height: 100px;
+  background: #ccc;
+  }
