--- a/app/style.css
+++ b/app/style.css
@@ -15,6 +15,15 @@
     overflow: scroll;
 }
 
+#search
+{
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px 0px;
+    height: 100px;
+    overflow: scroll;
+}
+
 .track
 {
     border: 1px solid #ccc;
